Inserindo html do app2

--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
                         <span id="mostra_resultado" hidden></span>
                       </section>
                 </div>
-                <div class="caixa">App2</div>
+                <div class="caixa">
+                  <section id="entrada">
+                    <h1 class="tituloC">Conta Caracteres</h1>
+                    <form action="" method="get" accept-charset="utf-8">
+                      <label for="" class="labelPalavra">Digitar frase: </label>
+                      <input type="text/submit/hidden/button/image" name="" id="frase" value="" />
+                      <button type="submit" id="btnFrase"> Mostrar</button>
+                    </form>
+                  </section>
+                  <section id="mostra"> 
+                    <span id="mostra_resultado_frase" hidden></span>
+                  </section>
+                </div>
                 <div class="caixa">App3</div>
                 <div class="caixa">App4</div>
                 <div class="caixa">App5</div>
@@ -36,10 +48,10 @@
                 <div class="caixa">App10</div>
                 <div class="caixa">App11</div>
                 <div class="caixa">App12</div>
-            
     </div>
     <footer>
     </footer>
     <script src="main.js"></script>
+    <script src="/gradeApps/app2/scriptApp2.js"></script>
   </body>
 </html>
