--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="estilo.css" type="text/css" media="all" />
     <link rel="stylesheet" href="reset.css" type="text/css" media="all" >
     <link rel="stylesheet" href="responsivo.css" type="text/css" media="all" >
+
+     
+
     <title>Grade Apps</title>
   </head>
   <body>
@@ -38,7 +41,19 @@
                     <span id="mostra_resultado_frase" hidden></span>
                   </section>
                 </div>
-                <div class="caixa">App3</div>
+                <div class="caixa">
+                  <section id="entrada">
+                    <h1 class="tituloC">Primeira letra maiúscula</h1>
+                    <form action="" method="get" accept-charset="utf-8">
+                      <label for="" class="labelPalavra">Digitar palavra: </label>
+                      <input type="text/submit/hidden/button/image" name="" id="word" value="">
+                      <button type="submit" id="btnWord"> Mostrar</button>
+                    </form>
+                  </section>
+                  <section id="mostra"> 
+                    <span id="mostra_resultado_word" hidden></span>
+                  </section>
+                </div>
                 <div class="caixa">App4</div>
                 <div class="caixa">App5</div>
                 <div class="caixa">App6</div>
@@ -48,10 +63,32 @@
                 <div class="caixa">App10</div>
                 <div class="caixa">App11</div>
                 <div class="caixa">App12</div>
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
+                <img src="img.jpg" alt="" srcset="">
     </div>
-    <footer>
-    </footer>
     <script src="main.js"></script>
-    <script src="/gradeApps/app2/scriptApp2.js"></script>
+    <script src="/app2/scriptApp2.js"></script>
+    <script src="/app3/scriptApp3.js"></script>
   </body>
 </html>
